--- a/test/conpany/conpany.html
+++ b/test/conpany/conpany.html
@@ -29,7 +29,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="time"></div>
+        <div id="time"></div>
 
     </div>
     <script src="conpany.js" type="text/javascript"></script>
