--- a/test/conpany/conpany.html
+++ b/test/conpany/conpany.html
@@ -16,14 +16,13 @@
             background-color: #FAFAFA;
             width:100%;
             height: 1500px;
-            border: solid 1px red;
         }
         .container>div{
             background-color: #fff;
             width:700px;
             height: 400px;
-            border: solid 1px blue;
             display: inline-block;
+            box-shadow: 0 1px 3px 0 rgba(0,0,0,.2),0 1px 1px 0 rgba(0,0,0,.14),0 2px 1px -1px rgba(0,0,0,.12);
         }
     </style>
 </head>
