--- a/test/conpany/conpany.html
+++ b/test/conpany/conpany.html
@@ -13,8 +13,8 @@
             padding: 0;
         }
         div.container{
+            padding:20px;
             background-color: #FAFAFA;
-            width:100%;
             height: 1500px;
         }
         .container>div{
