--- a/test/bar/bar.html
+++ b/test/bar/bar.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>创业公司分析</title>
+    <title>柱状图</title>
     <script src="../../bower_components/d3/d3.min.js"></script>
     <script src="../../bower_components/jquery/dist/jquery.min.js"></script>
     <script src="../../src/js/zcharts.js"></script>
@@ -31,6 +31,6 @@
         <div id="time"></div>
 
     </div>
-    <script src="conpany.js" type="text/javascript"></script>
+    <script src="bar.js" type="text/javascript"></script>
 </body>
 </html>
