--- a/test/bar/stack-bar.html
+++ b/test/bar/stack-bar.html
@@ -37,7 +37,7 @@
                 padding:{top:100,bottom:100,left:50,right:100},
                 container:{width:700,height:400},
                 color:['#95CCE6','#B6A2DE','#FED23D','#4087D7','#CBD87E'],
-                legend:["融资数量","融资金额","其他"],
+                legend:["融资数量","融资金额","其他1","其他2","其他3"],
                 xAxis :
                 {
                     data : ["北京加双筷子科技有限公司","北京小桔科技有限公司","南京途牛科技有限公司"],
