--- a/test/bar/bar-line.html
+++ b/test/bar/bar-line.html
@@ -5,8 +5,8 @@
     <title>柱状图</title>
     <script src="../../bower_components/d3/d3.min.js"></script>
     <script src="../../bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="../../src/js/zcharts.js"></script>
-    <link href="../../src/css/zcharts.css" type="text/css" rel="stylesheet">
+    <script src="../../dist/zchart.min.js"></script>
+    <link href="../../dist/zchart.min.css" type="text/css" rel="stylesheet">
     <style>
         *,body{
             margin: 0;
