--- a/test/bar/bar-line.html
+++ b/test/bar/bar-line.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>柱状图</title>
+    <title>柱状折线图</title>
     <script src="../../bower_components/d3/d3.min.js"></script>
     <script src="../../bower_components/jquery/dist/jquery.min.js"></script>
     <script src="../../dist/zchart.min.js"></script>
@@ -36,7 +36,9 @@
             padding:{top:100,bottom:100,left:50,right:100},
             container:{width:700,height:400},
             color:['#95CCE6','#B6A2DE','#FED23D','#4087D7','#CBD87E'],
-            legend:["融资数量","融资金额"],
+            legend:{
+                data:["融资数量","融资金额"]
+            },
             xAxis :
             {
                 data : ["北京加双筷子科技有限公司","北京小桔科技有限公司","南京途牛科技有限公司"],
