--- a/test/bar/bar-line.html
+++ b/test/bar/bar-line.html
@@ -72,7 +72,7 @@
             ]
         };
         var chart = new zcharts(timeOption);
-        chart.drawSvg('time',timeOption);
+        chart.initSvg('time',timeOption);
     </script>
 </body>
 </html>
