--- a/test/line/stack-line.html
+++ b/test/line/stack-line.html
@@ -79,7 +79,7 @@
                 ]
             };
             var chart = new zcharts(timeOption);
-            chart.drawSvg('time',timeOption);
+            chart.initSvg('time',timeOption);
 
         })();
     </script>
