--- a/test/bar/stack-bar.html
+++ b/test/bar/stack-bar.html
@@ -14,9 +14,8 @@
             padding: 0;
         }
         div.container{
-            padding:20px;
-            background-color: #FAFAFA;
-            height: 1500px;
+            text-align: center;
+            padding:50px;
         }
         .container>div{
             background-color: #fff;
