--- a/test/line/line.html
+++ b/test/line/line.html
@@ -13,9 +13,8 @@
             padding: 0;
         }
         div.container{
-            padding:20px;
-            background-color: #FAFAFA;
-            height: 1500px;
+            text-align: center;
+            padding:50px;
         }
         .container>div{
             background-color: #fff;
